      Debian infrastucture.  (Closes: #886057)
    + [CL] Emit pedantic warnings for packages that refer to a non-Git
      version control systems hosted in the Debian infrastructure for the
      upcoming salsa.debian.org migration.  (Closes: #885974)
    + [CL] Include the offending "Bugs" field value in the output of the
      bugs-field-does-not-refer-to-debian-infrastructure tag.
  * checks/huge-usr-share.pm:
    + [CL] Bump arch-dep-package-has-big-usr-share thresholds; they were
      last set in 2004.  (Closes: #648755)
  * checks/python.{pm,desc}:
    + [CL] Don't warn about django-package-does-not-depend-on-django for
      -doc packages, etc.
    + [CL] Lower the severity of the
      "dependency-on-python-version-marked-for-end-of-life" tag from normal
      ("W:") to wishlist ("I:") as it is not necessarily actionable by the
      maintainer. This reverts bug #883581.  (Closes: #886259)
  * checks/rules.pm:
    + [CL] Also allow $(overridden_command) when checking for the
      override_dh_fixperms-does-not-call-dh_fixperms etc. tags.
  * checks/scripts.desc:
    + [CL] Also mention Recommends and Suggests in the opening paragraph of
      python-script-but-no-python-dep.  (Closes: #687141)
  * checks/shared-libs.pm:
    + [CL] Skip Objective-C libraries for the no-symbols-control-file tag
      as instance/class methods do not appear in the symbol table. Thanks
      to Yavor Doganov for the report and help.  (Closes: #749202)
  * checks/source-copyright.desc:
    + [CL] Avoid false positives for missing-notice-file-for-apache-license
      by also looking for files with a .txt extension in binary packages.
      Thanks to Ferenc Wágner for the report.  (Closes: #886343)
  * checks/standards-version.desc:
    + [CL] Downgrade severity of out-of-date-standards-version from normal
      ("W:") to wishlist ("I:").  (Closes: #886210)

  * data/common/dbg-pkg:
    + [CL] Identify both python-foo-dbg and python3-foo-dbg as known debug