@@ -16,3 +16,15 @@ Description: {$description}
  Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.  It may
  be an empty package.
+
+Package: {$source}-dbgsym
+Architecture: {$architecture}
+Section: debug
+Depends: $\{misc:Depends\}
+Description: {$description} (fake dbgsym package)
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package. s
+ .
+ This is fake dbgsym package.
